# agent-debate

./: LICENSE  README.md  pyproject.toml
agent_debate/: __init__.py  cli.py  debate.py  model.py
agent_debate/roles/: advocate.txt  bear.txt  bull.txt  judge.txt  skeptic.txt
decisions/: acquire_stablecoin_issuer.md  hire_senior_eng_remote_only.md  kill_feature_y_to_focus.md  migrate_to_kotlin.md  return_to_office_5_days.md
examples/: run_demo.py
theses/: acquire_stablecoin_issuer.md  anthropic_secondary_2026.md  nvidia_at_4t_valuation.md
